# Help-Handler

./: HelpHandler.java  LICENSE  README.asciidoc  helpHandler.hpp  help_handler.h  help_handler.hpp  help_handler.py  help_handler_example.c  help_handler_example.cpp  main.java
c/: Compile.bat  README.asciidoc  help_handler.h
c/examples/: Compile.bat  clean.sh  compile.sh  example1.c  example2.c  example3.c  example4.c  example5.c  example6.c  example7.c  example8.c
c/test/: CMakeLists.txt  README.asciidoc  filledTestFile.txt  gtest.cpp  main.cpp
cpp/: README.asciidoc  helpHandler.hpp
cpp/examples/: Compile.bat  clean.bat  compile.sh  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp
cpp/test/: CMakeLists.txt  filledTestFile.txt  main.cpp
examples/: compile.sh  help_handler_example.c  help_handler_example.cpp  main.c  main.cpp  main.java  main.py
java/: HelpHandler.java  README.asciidoc
java/examples/: README.asciidoc  example1.java  example2.java  example3.java  example4.java  main.java  usage.txt
lua/: HelpHandler.lua  README.asciidoc
lua/examples/: example1.lua  example2.lua  example3.lua  example4.lua  example5.lua  example6.lua  example7.lua  example8.lua  example9.lua  run.bat  run.sh
lua/test/: README.asciidoc  unit-test.lua
python/: README.asciidoc  help_handler.py
python/examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example_dialogue_file.txt  run.bat  run.sh
python/test/: Dockerfile  README.asciidoc  tox.ini  unit-test.py
